syntax = "proto3";

package baker.ir.v1;

import "baker/ir/v1/types.proto";

// A IR value.
message Value {
  // A tuple of values.
  message Tuple {
    // Values in the tuple.
    repeated Value values = 1;
  }

  message MethodCall {
    Value receiver = 1;
    FunctionCall method = 2;
  }

  message Cast {
    Value value = 1;
    Type cast_as = 2;
  }

  message BinOp {
    enum Op {
      // Conventional default. Don't use.
      UNKNOWN = 0;
      // Equals
      EQ = 1;
      // Not Equals
      NE = 2;
      // Less Than
      LT = 3;
      // Less Equals
      LE = 4;
      // Greater Than
      GT = 5;
      // Greater Equals
      GE = 6;
      // And
      AND = 7;
      // Or
      OR = 8;
    }

    // Left side of the operation.
    Value left = 1;
    // The operator to apply.
    Op operator = 2;
    // Right side of the operation.
    Value right = 3;
  }

  enum ByRef {
    BY_VALUE = 0;
    CONST_REF = 1;
    MUT_REF = 2;
  }

  // The value
  oneof value {
    // A function call.
    FunctionCall call = 2;
    // An identifier.
    IdentifierPath identifier = 3;
    // A string value.
    string string_value = 4;
    // A tuple value.
    Tuple tuple = 5;
    // A method call.
    MethodCall method = 6;
    // Apply a binary operator.
    BinOp bin_op = 7;
    // Await a given value.
    Value await = 9;
    // Cast a value to another.
    Cast cast = 10;
  };

  ByRef by_ref = 20;
}

// A IR function call.
message FunctionCall {
  // The function being called.
  IdentifierPath function = 1;
  // Positional arguments in the call.
  repeated Value args = 2;
  // Keyword arguments in the call.
  map<string, Value> kwargs = 3;
}

// A pattern.
message Pattern {
  // The value of the pattern.
  oneof value {
    // A identifier pattern.
    IdentifierPath identifier = 1;
    // A sum pattern.
    FunctionCall sum = 2;
    // A constant.
    Value constant = 3;
  }
}
